<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location_fragment_1"
            android:icon="@drawable/ic_outline_push_pin_24"
            android:visible="false"
            android:title="@string/store_location" />
        <item
            android:id="@+id/nav_location_fragment_2"
            android:icon="@drawable/ic_outline_push_pin_24"
            android:visible="false"
            android:title="@string/store_location" />
        <item
            android:id="@+id/nav_location_fragment_3"
            android:icon="@drawable/ic_outline_push_pin_24"
            android:visible="false"
            android:title="@string/store_location" />
    </group>

    <item android:id="@+id/menu_other"
        tools:ignore="MenuTitle">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_compare_fragment"
                    android:icon="@drawable/ic_baseline_compare_arrows_24"
                    android:title="@string/compareAppHeading" />
            </group>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about_fragment"
                    android:icon="@drawable/ic_baseline_info_24"
                    android:title="@string/aboutAppHeading" />
            </group>
        </menu>
    </item>
</menu>