<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationManualSelectionFragment">

    <TextView
        android:id="@+id/location_entry_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="100dp"
        android:text="@string/location_entry_text"
        app:layout_constraintBottom_toTopOf="@+id/state_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/state_spinner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_entry_tv" />

    <Spinner
        android:id="@+id/state_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/state_spinner_text"
        app:layout_constraintTop_toBottomOf="@+id/location_entry_tv"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/county_spinner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/county"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/state_spinner_text" />

    <Spinner
        android:id="@+id/county_spinner"

    android:layout_margin="10dp"
    android:background="@color/colorPrimaryLight"
    android:padding="10dp"
    tools:context=".LocationManualSelectionFragment">

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/app_welcome"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_entry_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:text="@string/location_entry_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/state_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullscreen_content" />


    <Spinner
        android:id="@+id/state_spinner"
        android:textSize="22sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/location_entry_tv"
        app:layout_constraintTop_toBottomOf="@+id/location_entry_tv"
        app:layout_constraintVertical_chainStyle="packed" />

    <Spinner
        android:id="@+id/county_spinner"
        android:textSize="22sp"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/state_spinner"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/state_spinner"

        app:layout_constraintStart_toStartOf="@+id/location_entry_tv"

        app:layout_constraintTop_toBottomOf="@+id/state_spinner" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/submit_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/county_spinner"/>

        android:layout_marginTop="44dp"
        android:text="@string/submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/county_spinner" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"

        app:constraint_referenced_ids="state_spinner_text,county_spinner_text"
        tools:layout_editor_absoluteX="800dp" />


        tools:layout_editor_absoluteX="800dp" />

    <TextView
        android:id="@+id/loadingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_btn" />



</androidx.constraintlayout.widget.ConstraintLayout>